--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "0.27.2",
     "effect": "^1.0.4",
     "local-storage": "^2.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-validation": "^3.0.7",
