--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "local-storage": "^2.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "2.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.1",
